--- a/styles.css
+++ b/styles.css
@@ -65,13 +65,14 @@ strong {
   font-size: 80px;
   font-weight: 900;
   position: relative;
-  right: -10px;
+  right: -15px;
 }
 
 .temperature-icon {
   position: relative;
-  top: -5px;
-  font-size: 40px;
+  top: 15px;
+  width: 80px;
+  height: 80px;
   right: -13px;
 }
 
