--- a/src/styles.css
+++ b/src/styles.css
@@ -9,6 +9,7 @@ body {
   margin: 50px auto;
   padding: 30px;
   border-radius: 10px;
+  box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
 }
 
 header {
@@ -65,7 +66,7 @@ strong {
   font-size: 80px;
   font-weight: 900;
   position: relative;
-  right: -15px;
+  right: -12px;
 }
 
 .temperature-icon {
